using flexshrink to prevent icon shrinking and css gap

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,10 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 18px;
+  /* gap between icon column and right column */
+  gap: 16px;
 }
 
 .icon {
@@ -33,6 +37,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 10px;
+  /* flexshrink 0 to prevent icon getting smaller */
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -66,4 +73,22 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.right {
+  /* flex-shrink: 2; */
+  margin: 10px;
+}
+
+.warning {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 8px;
+}
+
+.text {
+  margin-bottom: 16px;
 }
